# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: __init__.py  cli.py  game_loop.py  messages.py  settings.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_games.py  calc.py  even.py  gcd.py  prime.py  progression.py
