[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vasily Orlenko <orlenko.vasily.p@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.even:main"
brain-calc = "brain_games.scripts.calc:main"
brain-gcd = "brain_games.scripts.gcd:main"
brain-progression = "brain_games.scripts.progression:main"
brain-prime = "brain_games.scripts.prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
